--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -23,7 +23,7 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, rgba(255, 182, 193, 1), rgba(255, 105, 180, 1));
+            background: linear-gradient(135deg, rgba(0, 35, 102, 1), rgba(29, 78, 95, 1));
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -39,73 +39,65 @@
         body::after {
             content: '';
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: -30%;
+            left: -30%;
+            width: 160%;
+            height: 160%;
             z-index: 2;
             pointer-events: none;
+            border-radius: 40%;
         }
 
         body::before {
             background:
-                radial-gradient(circle 20px at 15% 25%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
-                radial-gradient(circle 16px at 85% 15%, rgba(255, 105, 180, 0.2) 0%, transparent 60%),
-                radial-gradient(circle 26px at 65% 75%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
-                radial-gradient(circle 12px at 25% 85%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
-                radial-gradient(circle 22px at 90% 60%, rgba(255, 105, 180, 0.2) 0%, transparent 60%);
+                radial-gradient(ellipse 70% 50%, rgba(0, 35, 102, 1) 0%, rgba(255, 215, 0, 1) 40%, transparent 80%),
+                radial-gradient(ellipse 50% 70%, rgba(29, 78, 95, 1.0) 20%, rgba(0, 35, 102, 1) 60%, transparent 90%);
             opacity: 0.5;
-            animation: particleFloat1 3s ease-in-out infinite;
-            filter: blur(2px);
+            animation: waveFlow1 3s ease-in-out infinite;
+            filter: blur(40px);
         }
 
         body::after {
             background:
-                radial-gradient(circle 18px at 45% 65%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
-                radial-gradient(circle 24px at 5% 45%, rgba(255, 182, 193, 0.2) 0%, transparent 60%),
-                radial-gradient(circle 14px at 95% 35%, rgba(255, 105, 180, 0.2) 0%, transparent 60%),
-                radial-gradient(circle 20px at 75% 5%, rgba(199, 21, 133, 0.15) 0%, transparent 60%),
-                radial-gradient(circle 16px at 35% 95%, rgba(255, 182, 193, 0.2) 0%, transparent 60%);
+                radial-gradient(ellipse 60% 80%, rgba(255, 215, 0, 1) 10%, rgba(29, 78, 95, 1.0) 50%, transparent 85%),
+                radial-gradient(ellipse 80% 60%, rgba(0, 35, 102, 1) 30%, rgba(255, 215, 0, 1) 70%, transparent 95%);
             opacity: 0.4;
-            animation: particleFloat2 4.2s ease-in-out infinite;
-            animation-delay: 1.2s;
-            filter: blur(3px);
+            animation: waveFlow2 5.4s ease-in-out infinite;
+            animation-delay: 0.6s;
+            filter: blur(50px);
         }
 
-        @keyframes particleFloat1 {
+        @keyframes waveFlow1 {
             0%, 100% {
-                transform: translateY(0px) translateX(0px) scale(1);
+                transform: rotate(45deg) scale(1) translateX(0%);
             }
             25% {
-                transform: translateY(-20px) translateX(15px) scale(1.1);
+                transform: rotate(45deg) scale(1.2) translateX(5%);
             }
             50% {
-                transform: translateY(-35px) translateX(25px) scale(0.9);
+                transform: rotate(45deg) scale(1.4) translateX(15%);
             }
             75% {
-                transform: translateY(-15px) translateX(10px) scale(1.05);
+                transform: rotate(45deg) scale(1.1) translateX(8%);
             }
         }
 
-        @keyframes particleFloat2 {
+        @keyframes waveFlow2 {
             0%, 100% {
-                transform: translateY(0px) translateX(0px) scale(1);
+                transform: rotate(165deg) scale(1.3) translateY(0%);
             }
-            25% {
-                transform: translateY(25px) translateX(-10px) scale(0.95);
+            33% {
+                transform: rotate(165deg) scale(0.9) translateY(-10%);
             }
-            50% {
-                transform: translateY(40px) translateX(-20px) scale(1.1);
-            }
-            75% {
-                transform: translateY(15px) translateX(-5px) scale(1.02);
+            66% {
+                transform: rotate(165deg) scale(1.1) translateY(-20%);
             }
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(20px);
-            border-radius: 28px;
+            border-radius: 24px;
             padding: 30px 25px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             text-align: center;
@@ -124,7 +116,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, rgba(255, 182, 193, 1), rgba(255, 105, 180, 1));
+            background: linear-gradient(90deg, rgba(255, 215, 0, 1), rgba(0, 35, 102, 1));
         }
 
         @keyframes fadeInUp {
@@ -149,7 +141,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px solid rgba(255, 182, 193, 1);
+            border: 3px solid rgba(255, 215, 0, 1);
         }
 
         .logo img {
@@ -161,7 +153,7 @@
         .title {
             font-size: 26px;
             font-weight: 700;
-            color: rgba(199, 21, 133, 1);
+            color: rgba(0, 35, 102, 1);
             margin-bottom: 8px;
             line-height: 1.3;
         }
@@ -183,12 +175,12 @@
             display: block;
             padding: 16px 20px;
             background: rgba(255, 255, 255, 1);
-            color: rgba(199, 21, 133, 1);
+            color: rgba(0, 35, 102, 1);
             text-decoration: none;
-            border-radius: 16px;
+            border-radius: 12px;
             font-weight: 600;
             font-size: 15px;
-            border: 2px solid rgba(255, 182, 193, 1);
+            border: 2px solid rgba(234, 234, 234, 1);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -196,10 +188,10 @@
 
         .link-button:hover {
             transform: translateY(-2px);
-            background: linear-gradient(135deg, rgba(255, 182, 193, 1), rgba(255, 255, 255, 1));
-            color: rgba(199, 21, 133, 1);
-            border: 2px solid rgba(255, 105, 180, 1);
-            box-shadow: 0 0 30px rgba(255, 182, 193, 0.4);
+            background: linear-gradient(135deg, rgba(255, 215, 0, 1), rgba(255, 255, 255, 1));
+            color: rgba(0, 35, 102, 1);
+            border: 2px solid rgba(255, 215, 0, 1);
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
         }
 
         .footer {
