--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -1,19 +1,30 @@
 <!-- filename: bps-tanjungpinang -->
+<!-- image: false -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BPS Kota Tanjungpinang | Taut Pinang</title>
-    <meta name="description" content="Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua">
-    <meta name="robots" content="index, follow">
     <meta property="og:title" content="BPS Kota Tanjungpinang">
     <meta property="og:description" content="Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bps2172.github.io/TautPinang/bps-tanjungpinang.html">
+    <meta property="og:image" content="https://i.pinimg.com/474x/e4/8a/b2/e48ab2e2e8055f15f04caf6968c1314a.jpg">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="400">
+    <meta property="og:site_name" content="Taut Pinang - BPS Kota Tanjungpinang">
+    <meta property="og:locale" content="id_ID">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="BPS Kota Tanjungpinang">
+    <meta name="twitter:description" content="Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua">
+    <meta name="twitter:image" content="https://i.pinimg.com/474x/e4/8a/b2/e48ab2e2e8055f15f04caf6968c1314a.jpg">
+    <meta name="author" content="BPS Kota Tanjungpinang">
+    <meta name="robots" content="index, follow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
         * {
             margin: 0;
@@ -23,7 +34,7 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, rgba(0, 51, 102, 1), rgba(0, 128, 128, 1));
+            background: linear-gradient(135deg, rgba(0, 35, 102, 1), rgba(29, 78, 95, 1));
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -35,64 +46,6 @@
         }
 
 
-        body::before,
-        body::after {
-            content: '';
-            position: fixed;
-            top: -30%;
-            left: -30%;
-            width: 160%;
-            height: 160%;
-            z-index: 2;
-            pointer-events: none;
-            border-radius: 40%;
-        }
-
-        body::before {
-            background:
-                radial-gradient(ellipse 70% 50%, rgba(0, 51, 102, 0.15) 0%, rgba(0, 128, 128, 0.15) 40%, transparent 80%),
-                radial-gradient(ellipse 50% 70%, rgba(255, 215, 0, 0.1) 20%, rgba(0, 51, 102, 0.15) 60%, transparent 90%);
-            opacity: 0.4;
-            animation: waveFlow1 3s ease-in-out infinite;
-            filter: blur(40px);
-        }
-
-        body::after {
-            background:
-                radial-gradient(ellipse 60% 80%, rgba(0, 128, 128, 0.15) 10%, rgba(255, 215, 0, 0.1) 50%, transparent 85%),
-                radial-gradient(ellipse 80% 60%, rgba(0, 51, 102, 0.15) 30%, rgba(0, 128, 128, 0.15) 70%, transparent 95%);
-            opacity: 0.32;
-            animation: waveFlow2 5.4s ease-in-out infinite;
-            animation-delay: 0.6s;
-            filter: blur(50px);
-        }
-
-        @keyframes waveFlow1 {
-            0%, 100% {
-                transform: rotate(0deg) scale(1) translateX(0%);
-            }
-            25% {
-                transform: rotate(0deg) scale(1.2) translateX(5%);
-            }
-            50% {
-                transform: rotate(0deg) scale(1.4) translateX(15%);
-            }
-            75% {
-                transform: rotate(0deg) scale(1.1) translateX(8%);
-            }
-        }
-
-        @keyframes waveFlow2 {
-            0%, 100% {
-                transform: rotate(120deg) scale(1.3) translateY(0%);
-            }
-            33% {
-                transform: rotate(120deg) scale(0.9) translateY(-10%);
-            }
-            66% {
-                transform: rotate(120deg) scale(1.1) translateY(-20%);
-            }
-        }
 
         .container {
             background: rgba(255, 255, 255, 0.95);
@@ -116,7 +69,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, rgba(0, 128, 128, 1), rgba(255, 215, 0, 1));
+            background: linear-gradient(90deg, rgba(255, 215, 0, 1), rgba(0, 35, 102, 1));
         }
 
         @keyframes fadeInUp {
@@ -141,7 +94,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px solid rgba(0, 128, 128, 1);
+            border: 3px solid rgba(255, 215, 0, 1);
         }
 
         .logo img {
@@ -153,13 +106,13 @@
         .title {
             font-size: 26px;
             font-weight: 700;
-            color: rgba(0, 51, 102, 1);
+            color: rgba(0, 35, 102, 1);
             margin-bottom: 8px;
             line-height: 1.3;
         }
 
         .description {
-            color: rgba(51, 51, 51, 1);
+            color: rgba(102, 102, 102, 1);
             font-size: 15px;
             margin-bottom: 25px;
             line-height: 1.5;
@@ -175,12 +128,12 @@
             display: block;
             padding: 16px 20px;
             background: rgba(255, 255, 255, 1);
-            color: rgba(0, 51, 102, 1);
+            color: rgba(0, 35, 102, 1);
             text-decoration: none;
             border-radius: 12px;
             font-weight: 600;
             font-size: 15px;
-            border: 2px solid rgba(0, 128, 128, 1);
+            border: 2px solid rgba(234, 234, 234, 1);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -189,20 +142,19 @@
         .link-button:hover {
             transform: translateY(-2px);
             background: linear-gradient(135deg, rgba(255, 215, 0, 1), rgba(255, 255, 255, 1));
-            color: rgba(0, 51, 102, 1);
-            border: 2px solid rgba(0, 128, 128, 1);
-            box-shadow: 0 0 30px rgba(0, 128, 128, 0.3);
+            color: rgba(0, 35, 102, 1);
+            border: 2px solid rgba(255, 215, 0, 1);
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
         }
 
         .footer {
             margin-top: 30px;
             padding-top: 20px;
             border-top: 1px solid rgba(238, 238, 238, 1);
-            color: rgba(102, 102, 102, 1);
+            color: rgba(153, 153, 153, 1);
             font-size: 12px;
         }
 
-        /* 🔥 FIXED: Better QR Code styles */
         #qr-code-container {
             transition: all 0.3s ease !important;
         }
@@ -254,7 +206,6 @@
 
 <!-- QR Code Libraries with Multiple CDN Fallbacks -->
 <script>
-// 🔥 FIXED: Multiple CDN fallback untuk QR Code library
 (function() {
     let qrLibLoaded = false;
     let currentCDN = 0;
@@ -282,17 +233,14 @@
         script.onerror = function() {
             console.warn('⚠️ CDN gagal:', cdnList[currentCDN]);
             currentCDN++;
-            loadQRLibrary(); // Try next CDN
+            loadQRLibrary();
         };
         document.head.appendChild(script);
     }
 
-    // Start loading QR library
     loadQRLibrary();
 
-    // Robust QR Code initialization
     function initQRCode() {
-        // Wait for DOM to be fully loaded
         if (document.readyState !== 'complete') {
             window.addEventListener('load', generateQRCode);
         } else {
@@ -319,13 +267,11 @@
 
             if (!qrSettings.enabled) return;
 
-            // Remove existing QR code if any
             const existingQR = document.getElementById('qr-code-container');
             if (existingQR) existingQR.remove();
 
             const currentUrl = window.location.href;
 
-            // Create QR container
             const qrContainer = document.createElement('div');
             qrContainer.id = 'qr-code-container';
             qrContainer.style.cssText = `
@@ -343,7 +289,6 @@
                 user-select: none;
             `;
 
-            // Hide on mobile if setting is disabled
             if (!qrSettings.showOnMobile) {
                 function toggleQRVisibility() {
                     qrContainer.style.display = window.innerWidth <= 768 ? 'none' : 'block';
@@ -352,7 +297,6 @@
                 window.addEventListener('resize', toggleQRVisibility);
             }
 
-            // Try to use QRCode library, fallback to API
             if (typeof QRCode !== 'undefined' && qrLibLoaded) {
                 console.log('📊 Generating QR with QRCode.js library');
                 const canvas = document.createElement('canvas');
@@ -388,11 +332,9 @@
         }
     }
 
-    // Fallback QR using external API
     function createFallbackQR(container, settings, url) {
         const img = document.createElement('img');
 
-        // Multiple API fallbacks
         const apiList = [
             `https://api.qrserver.com/v1/create-qr-code/?size=${settings.size}x${settings.size}&data=${encodeURIComponent(url)}&color=${settings.darkColor.replace('#', '')}&bgcolor=${settings.lightColor.replace('#', '')}`,
             `https://chart.googleapis.com/chart?chs=${settings.size}x${settings.size}&cht=qr&chl=${encodeURIComponent(url)}`,
@@ -429,10 +371,8 @@
         tryAPI();
     }
 
-    // Add hover effects and tooltip
     function addQRInteractions(container, settings) {
         if (settings.hoverEffect) {
-            // Add tooltip
             const tooltip = document.createElement('div');
             tooltip.style.cssText = `
                 position: absolute;
@@ -453,7 +393,6 @@
             tooltip.textContent = settings.tooltipText;
             container.appendChild(tooltip);
 
-            // Hover events
             container.addEventListener('mouseenter', function() {
                 this.style.transform = 'scale(1.1)';
                 this.style.boxShadow = '0 6px 20px rgba(0, 0, 0, 0.25)';
