Update link page: BPS Kota Tanjungpinang | Taut Pinang

--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BPS Kota Tanjungpinang | Taut Pinang</title>
-    <meta property="og:title" content="BPS Kota Tanjungpinang">
+    <meta property="og:title" content="BPS Kota Tanjungpinang | Taut Pinang">
     <meta property="og:description" content="Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bps2172.github.io/TautPinang/bps-tanjungpinang.html">
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="Taut Pinang - BPS Kota Tanjungpinang">
     <meta property="og:locale" content="id_ID">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="BPS Kota Tanjungpinang">
+    <meta name="twitter:title" content="BPS Kota Tanjungpinang | Taut Pinang">
     <meta name="twitter:description" content="Badan Pusat Statistik Kota Tanjungpinang - Satu Data Untuk Semua">
     <meta name="twitter:image" content="https://i.pinimg.com/474x/e4/8a/b2/e48ab2e2e8055f15f04caf6968c1314a.jpg">
     <meta name="author" content="BPS Kota Tanjungpinang">
