--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -187,6 +187,14 @@
     </style>
 </head>
 <body>
+    <!-- Copy Link Button -->
+    <button id="copyLinkBtn" onclick="copyCurrentUrl()"
+            style="position: fixed; top: 20px; right: 20px; z-index: 1000; background: #3B82F6; color: white; border: none; padding: 12px; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.15); cursor: pointer; transition: all 0.3s ease; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center;">
+        <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+        </svg>
+    </button>
+
     <div class="container">
         <div class="logo">
             <img src="https://i.pinimg.com/474x/e4/8a/b2/e48ab2e2e8055f15f04caf6968c1314a.jpg" alt="Logo BPS" onerror="this.style.display='none'">
@@ -410,5 +418,60 @@
     }
 })();
 </script>
+
+    <!-- Copy Button JavaScript -->
+    <script>
+    function copyCurrentUrl() {
+        const url = window.location.href;
+
+        if (navigator.clipboard) {
+            navigator.clipboard.writeText(url).then(() => {
+                showCopySuccess();
+            }).catch(() => {
+                fallbackCopy(url);
+            });
+        } else {
+            fallbackCopy(url);
+        }
+    }
+
+    function fallbackCopy(text) {
+        const textArea = document.createElement('textarea');
+        textArea.value = text;
+        document.body.appendChild(textArea);
+        textArea.select();
+        document.execCommand('copy');
+        document.body.removeChild(textArea);
+        showCopySuccess();
+    }
+
+    function showCopySuccess() {
+        const btn = document.getElementById('copyLinkBtn');
+        const originalContent = btn.innerHTML;
+
+        btn.innerHTML = '<svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>';
+        btn.style.background = '#10B981';
+
+        setTimeout(() => {
+            btn.innerHTML = originalContent;
+            btn.style.background = '#3B82F6';
+        }, 2000);
+    }
+
+    // Hover effects
+    document.addEventListener('DOMContentLoaded', function() {
+        const btn = document.getElementById('copyLinkBtn');
+
+        btn.addEventListener('mouseenter', function() {
+            this.style.transform = 'scale(1.1)';
+            this.style.background = '#2563EB';
+        });
+
+        btn.addEventListener('mouseleave', function() {
+            this.style.transform = 'scale(1)';
+            this.style.background = '#3B82F6';
+        });
+    });
+    </script>
 </body>
 </html>
