--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -34,7 +34,7 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, rgba(0, 35, 102, 1), rgba(29, 78, 95, 1));
+            background: linear-gradient(135deg, rgba(255, 102, 0, 1), rgba(255, 102, 0, 1));
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -46,9 +46,67 @@
         }
 
 
+        body::before,
+        body::after {
+            content: '';
+            position: fixed;
+            top: -30%;
+            left: -30%;
+            width: 160%;
+            height: 160%;
+            z-index: 2;
+            pointer-events: none;
+            border-radius: 40%;
+        }
+
+        body::before {
+            background:
+                radial-gradient(ellipse 70% 50%, rgba(255, 102, 0, 0.2) 0%, rgba(0, 0, 0, 0.15) 40%, transparent 80%),
+                radial-gradient(ellipse 50% 70%, rgba(255, 215, 0, 0.2) 20%, rgba(255, 102, 0, 0.2) 60%, transparent 90%);
+            opacity: 0.5;
+            animation: waveFlow1 3s ease-in-out infinite;
+            filter: blur(40px);
+        }
+
+        body::after {
+            background:
+                radial-gradient(ellipse 60% 80%, rgba(0, 0, 0, 0.15) 10%, rgba(255, 215, 0, 0.2) 50%, transparent 85%),
+                radial-gradient(ellipse 80% 60%, rgba(255, 102, 0, 0.2) 30%, rgba(0, 0, 0, 0.15) 70%, transparent 95%);
+            opacity: 0.4;
+            animation: waveFlow2 5.4s ease-in-out infinite;
+            animation-delay: 0.6s;
+            filter: blur(50px);
+        }
+
+        @keyframes waveFlow1 {
+            0%, 100% {
+                transform: rotate(0deg) scale(1) translateX(0%);
+            }
+            25% {
+                transform: rotate(0deg) scale(1.2) translateX(5%);
+            }
+            50% {
+                transform: rotate(0deg) scale(1.4) translateX(15%);
+            }
+            75% {
+                transform: rotate(0deg) scale(1.1) translateX(8%);
+            }
+        }
+
+        @keyframes waveFlow2 {
+            0%, 100% {
+                transform: rotate(120deg) scale(1.3) translateY(0%);
+            }
+            33% {
+                transform: rotate(120deg) scale(0.9) translateY(-10%);
+            }
+            66% {
+                transform: rotate(120deg) scale(1.1) translateY(-20%);
+            }
+        }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.92);
             backdrop-filter: blur(20px);
             border-radius: 24px;
             padding: 30px 25px;
@@ -69,7 +127,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, rgba(255, 215, 0, 1), rgba(0, 35, 102, 1));
+            background: linear-gradient(90deg, rgba(255, 102, 0, 1), rgba(0, 0, 0, 1));
         }
 
         @keyframes fadeInUp {
@@ -87,14 +145,14 @@
             width: 80px;
             height: 80px;
             margin: 20px auto 20px;
-            border-radius: 50px;
+            border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             background: rgba(255, 255, 255, 1);
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px solid rgba(255, 215, 0, 1);
+            border: 3px solid rgba(255, 102, 0, 1);
         }
 
         .logo img {
@@ -104,9 +162,9 @@
         }
 
         .title {
-            font-size: 26px;
+            font-size: 28px;
             font-weight: 700;
-            color: rgba(0, 35, 102, 1);
+            color: rgba(0, 0, 0, 1);
             margin-bottom: 8px;
             line-height: 1.3;
         }
@@ -128,9 +186,9 @@
             display: block;
             padding: 16px 20px;
             background: rgba(255, 255, 255, 1);
-            color: rgba(0, 35, 102, 1);
+            color: rgba(255, 102, 0, 1);
             text-decoration: none;
-            border-radius: 12px;
+            border-radius: 16px;
             font-weight: 600;
             font-size: 15px;
             border: 2px solid rgba(234, 234, 234, 1);
@@ -141,10 +199,10 @@
 
         .link-button:hover {
             transform: translateY(-2px);
-            background: linear-gradient(135deg, rgba(255, 215, 0, 1), rgba(255, 255, 255, 1));
-            color: rgba(0, 35, 102, 1);
-            border: 2px solid rgba(255, 215, 0, 1);
-            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
+            background: linear-gradient(135deg, rgba(255, 102, 0, 1), rgba(255, 255, 255, 1));
+            color: rgba(0, 0, 0, 1);
+            border: 2px solid rgba(255, 102, 0, 1);
+            box-shadow: 0 0 35px rgba(255, 102, 0, 0.4);
         }
 
         .footer {
@@ -176,7 +234,7 @@
             }
 
             .title {
-                font-size: calc(26px * 0.85);
+                font-size: calc(28px * 0.85);
             }
 
             .link-button {
