--- a/bps-tanjungpinang.html
+++ b/bps-tanjungpinang.html
@@ -34,7 +34,7 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, rgba(255, 102, 0, 1), rgba(255, 102, 0, 1));
+            background: linear-gradient(135deg, rgba(0, 35, 102, 1), rgba(29, 78, 95, 1));
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -46,67 +46,9 @@
         }
 
 
-        body::before,
-        body::after {
-            content: '';
-            position: fixed;
-            top: -30%;
-            left: -30%;
-            width: 160%;
-            height: 160%;
-            z-index: 2;
-            pointer-events: none;
-            border-radius: 40%;
-        }
-
-        body::before {
-            background:
-                radial-gradient(ellipse 70% 50%, rgba(255, 102, 0, 0.2) 0%, rgba(0, 0, 0, 0.15) 40%, transparent 80%),
-                radial-gradient(ellipse 50% 70%, rgba(255, 215, 0, 0.2) 20%, rgba(255, 102, 0, 0.2) 60%, transparent 90%);
-            opacity: 0.5;
-            animation: waveFlow1 3s ease-in-out infinite;
-            filter: blur(40px);
-        }
-
-        body::after {
-            background:
-                radial-gradient(ellipse 60% 80%, rgba(0, 0, 0, 0.15) 10%, rgba(255, 215, 0, 0.2) 50%, transparent 85%),
-                radial-gradient(ellipse 80% 60%, rgba(255, 102, 0, 0.2) 30%, rgba(0, 0, 0, 0.15) 70%, transparent 95%);
-            opacity: 0.4;
-            animation: waveFlow2 5.4s ease-in-out infinite;
-            animation-delay: 0.6s;
-            filter: blur(50px);
-        }
-
-        @keyframes waveFlow1 {
-            0%, 100% {
-                transform: rotate(0deg) scale(1) translateX(0%);
-            }
-            25% {
-                transform: rotate(0deg) scale(1.2) translateX(5%);
-            }
-            50% {
-                transform: rotate(0deg) scale(1.4) translateX(15%);
-            }
-            75% {
-                transform: rotate(0deg) scale(1.1) translateX(8%);
-            }
-        }
-
-        @keyframes waveFlow2 {
-            0%, 100% {
-                transform: rotate(120deg) scale(1.3) translateY(0%);
-            }
-            33% {
-                transform: rotate(120deg) scale(0.9) translateY(-10%);
-            }
-            66% {
-                transform: rotate(120deg) scale(1.1) translateY(-20%);
-            }
-        }
 
         .container {
-            background: rgba(255, 255, 255, 0.92);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(20px);
             border-radius: 24px;
             padding: 30px 25px;
@@ -127,7 +69,7 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, rgba(255, 102, 0, 1), rgba(0, 0, 0, 1));
+            background: linear-gradient(90deg, rgba(255, 215, 0, 1), rgba(0, 35, 102, 1));
         }
 
         @keyframes fadeInUp {
@@ -145,14 +87,14 @@
             width: 80px;
             height: 80px;
             margin: 20px auto 20px;
-            border-radius: 10px;
+            border-radius: 50px;
             overflow: hidden;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             background: rgba(255, 255, 255, 1);
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 3px solid rgba(255, 102, 0, 1);
+            border: 3px solid rgba(255, 215, 0, 1);
         }
 
         .logo img {
@@ -162,9 +104,9 @@
         }
 
         .title {
-            font-size: 28px;
+            font-size: 26px;
             font-weight: 700;
-            color: rgba(0, 0, 0, 1);
+            color: rgba(0, 35, 102, 1);
             margin-bottom: 8px;
             line-height: 1.3;
         }
@@ -186,9 +128,9 @@
             display: block;
             padding: 16px 20px;
             background: rgba(255, 255, 255, 1);
-            color: rgba(255, 102, 0, 1);
+            color: rgba(0, 35, 102, 1);
             text-decoration: none;
-            border-radius: 16px;
+            border-radius: 12px;
             font-weight: 600;
             font-size: 15px;
             border: 2px solid rgba(234, 234, 234, 1);
@@ -199,10 +141,10 @@
 
         .link-button:hover {
             transform: translateY(-2px);
-            background: linear-gradient(135deg, rgba(255, 102, 0, 1), rgba(255, 255, 255, 1));
-            color: rgba(0, 0, 0, 1);
-            border: 2px solid rgba(255, 102, 0, 1);
-            box-shadow: 0 0 35px rgba(255, 102, 0, 0.4);
+            background: linear-gradient(135deg, rgba(255, 215, 0, 1), rgba(255, 255, 255, 1));
+            color: rgba(0, 35, 102, 1);
+            border: 2px solid rgba(255, 215, 0, 1);
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
         }
 
         .footer {
@@ -234,7 +176,7 @@
             }
 
             .title {
-                font-size: calc(28px * 0.85);
+                font-size: calc(26px * 0.85);
             }
 
             .link-button {
@@ -247,7 +189,7 @@
 <body>
     <!-- Copy Link Button -->
     <button id="copyLinkBtn" onclick="copyCurrentUrl()"
-            style="position: fixed; top: 20px; right: 20px; z-index: 1000; background: #3B82F6; color: white; border: none; padding: 12px; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.15); cursor: pointer; transition: all 0.3s ease; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center;">
+            style="position: fixed; top: 20px; right: 20px; z-index: 1000; background: rgba(255, 255, 255, 0.95); color: rgba(0, 35, 102, 1); border: none; padding: 12px; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.15); cursor: pointer; transition: all 0.3s ease; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center;">
         <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
         </svg>
@@ -506,29 +448,63 @@
     function showCopySuccess() {
         const btn = document.getElementById('copyLinkBtn');
         const originalContent = btn.innerHTML;
+        const originalBg = btn.style.background;
 
         btn.innerHTML = '<svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>';
         btn.style.background = '#10B981';
 
         setTimeout(() => {
             btn.innerHTML = originalContent;
-            btn.style.background = '#3B82F6';
+            btn.style.background = originalBg;
         }, 2000);
     }
 
-    // Hover effects
+    // Hover effects - UPDATED: menggunakan warna yang dinamis
     document.addEventListener('DOMContentLoaded', function() {
         const btn = document.getElementById('copyLinkBtn');
+        const originalBg = 'rgba(255, 255, 255, 0.95)';
+
+        // Generate darker version untuk hover (kurangi opacity atau darken)
+        const hoverBg = adjustColorBrightness(originalBg, -20);
 
         btn.addEventListener('mouseenter', function() {
             this.style.transform = 'scale(1.1)';
-            this.style.background = '#2563EB';
+            this.style.background = hoverBg;
         });
 
         btn.addEventListener('mouseleave', function() {
             this.style.transform = 'scale(1)';
-            this.style.background = '#3B82F6';
+            this.style.background = originalBg;
         });
+
+        // Helper function untuk adjust brightness
+        function adjustColorBrightness(color, amount) {
+            // Jika rgba, extract RGB values
+            const rgbaMatch = color.match(/rgba\((\d+),\s*(\d+),\s*(\d+),\s*([\d.]+)\)/);
+            if (rgbaMatch) {
+                let r = Math.max(0, Math.min(255, parseInt(rgbaMatch[1]) + amount));
+                let g = Math.max(0, Math.min(255, parseInt(rgbaMatch[2]) + amount));
+                let b = Math.max(0, Math.min(255, parseInt(rgbaMatch[3]) + amount));
+                let a = rgbaMatch[4];
+                return `rgba(${r}, ${g}, ${b}, ${a})`;
+            }
+
+            // Jika hex color
+            const hexMatch = color.match(/^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$/);
+            if (hexMatch) {
+                let hex = hexMatch[1];
+                if (hex.length === 3) {
+                    hex = hex[0] + hex[0] + hex[1] + hex[1] + hex[2] + hex[2];
+                }
+                let r = Math.max(0, Math.min(255, parseInt(hex.substr(0, 2), 16) + amount));
+                let g = Math.max(0, Math.min(255, parseInt(hex.substr(2, 2), 16) + amount));
+                let b = Math.max(0, Math.min(255, parseInt(hex.substr(4, 2), 16) + amount));
+                return `rgb(${r}, ${g}, ${b})`;
+            }
+
+            // Fallback
+            return color;
+        }
     });
     </script>
 </body>
